# minecraft-gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  MinecraftGenerator.ipynb  README.md  environment.yml  minecraft_gen.py  noxfile.py  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md
docs/api/: minecraft_gen.rst
orig/: Minecraft Terrain Generation in Python - By Bilal Himite.ipynb
src/minecraft_gen/: __init__.py
tests/: test_bezier.py  test_biomes.py  test_blur_boundaries.py  test_boundary.py  test_cells.py  test_gradient.py  test_height_map.py  test_histeq.py  test_normal.py  test_quantize.py  test_relax.py  test_trees.py  test_voronoi.py  usernames.txt
