[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minecraft-gen"
version = "0.1.0"
classifiers = [
  "Private :: Do Not Upload",
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "noise",
]

[project.optional-dependencies]
test = [
  "pytest",
]
plot = [
  "matplotlib",
  "pillow",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]
